lb bag fix, content:flamenco

--- a/JS/header.html
+++ b/JS/header.html
@@ -3,7 +3,7 @@
 <!-- <a href="../sailing/" title="sailing"><img src="../icons/sailing.png" alt="sailing"></a> -->
 <a href="../programming/" title="programming"><img src="../icons/programing.png" alt="programming"></a>
 <!-- <a href="../Alpinism/" title="alpinisme"><img src="../icons/alpinism.png" alt="alpinisme"></a> -->
-<!-- <a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a> -->
+<a href="../flamenco/" title="flamenco"><img src="../icons/flamenco.png" alt="flamenco"></a>
 <!-- <a href="../13vek.html" title="medieval"><img src="../icons/medieval.png" alt="medieval"></a> -->
 <a href="../zdorovie/" title="Здоровье"><img src="../icons/zdorovie.png" alt="Здоровье"></a>
 <a href="../Skateboard/" title="Лонгбординг"><img src="../icons/skateboarding.png" alt="skateboarding"></a>
