--- a/flamenco/alegrias.html
+++ b/flamenco/alegrias.html
@@ -1,12 +1,12 @@
 <div id="pageTitle">Alegrias</div>
 
-<div class="import_Img">
+<div>
  <font color="#ff9900"><b> Toque</b></font> <br><br>
 
 <audio controls>  <source src="http://leonardasf1.narod.ru/flamenco/alegrias/FLAMENCO_curso_Juan_Martin-Leccion_06-alegrias.mp3" type="audio/mpeg"></audio><br>
 <a href="http://leonardasf1.narod.ru/flamenco/alegrias/Juan_Martin_s_Guitar_Method_Flamenco_RUS_6.pdf">Juan_Martin_s_Guitar_Method_Flamenco_RUS_Leccion_6-alegrias.pdf</a>
 <hr>
-Enrique de Melchor. alegrias en do <a href="http://leonardasf1.narod.ru/flamenco/alegrias/EMalegrias1.mpg" target="_blank">.video</a><br><br>
+Enrique de Melchor. alegrias en do <a href="../flamenco/alegrias/EMalegrias1.mpg" target="_blank">.video</a><br><br>
 <a href="../flamenco/alegrias/AlegriasEM2.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/alegrias/AlegriasEM2-200.jpg"></a>
 <a href="../flamenco/alegrias/AlegriasEM3.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/alegrias/AlegriasEM3-200.jpg"></a>
 <hr>
@@ -18,4 +18,5 @@ Enrique de Melchor. alegrias en mi <a href="http://leonardasf1.narod.ru/flamenco
  <font color="#ff9900"><b> Baile</b></font> <br><br>
 <br><a href="https://youtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo .2008</a>
 <br><a href="https://youtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral .2007</a>
+
 </div>
