--- a/flamenco/bulerias.html
+++ b/flamenco/bulerias.html
@@ -1,157 +1,57 @@
-<html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-    <title>leonardasf1.narod.ru Bulerias</title>
-<LINK href="http://leonardasf1.narod.ru/favicon.ico" rel="SHORTCUT ICON">
-<META NAME="RESOURCE-TYPE" CONTENT="DOCUMENT">
-<META NAME="DISTRIBUTION" CONTENT="GLOBAL">
-<META NAME="KEYWORDS" CONTENT="flamenco">
-<META NAME="DESCRIPTION" CONTENT="flamenco">
+<div id="pageTitle">Bulerias Toque</div>
 
-<META NAME="REVISIT-AFTER" CONTENT="1 DAYS">
-<META NAME="RATING" CONTENT="GENERAL">
-<style type="text/css">
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 10pt;
-}
-.style1 {
-	text-align: center;
-}
-.style2 {
-	color: #000000;
-}
-</style>
-
-  <link rel="stylesheet" href="http://leonardasf1.narod.ru/lightbox/dist/css/lightbox.min.css">
-
-</head>
-<body bgcolor="#C0C0C0" text="#000000" vLink="#FFFFFF" link="#FFFFFF" background="background.jpg" class="newStyle1">
-
-<table border="0" cellspacing="0" cellpadding="0" align="center" height="100%" width="100%">
- <tr>
-	<td rowspan="5" class="line">
-						<IMG height="100%" src="spacer.gif" width="1">
-	</td>
-  <td vAlign="top" style="height: 102px" width="100%" background="http://leonardasf1.narod.ru/header-gray.jpg">
-<br><br><br>
-<div align="center"><font size=6 color="#ffffff">flamenco</font><font size=6> . Bulerias</div>
-<div align="right">
-<br>
-<font size=3>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/index.html" title="home"><img src="http://leonardasf1.narod.ru/favicon.ico" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/F1_Challenge/F1_Challenge.html" title="formula 1"><img src="http://leonardasf1.narod.ru/f1.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/Alpinism/Alpinism.html" title="alpinisme"><img src="http://leonardasf1.narod.ru/alpinism.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/sailing.html" title="sailing"><img src="http://leonardasf1.narod.ru/sailing.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/flamenco.html" title="flamenco"><img src="http://leonardasf1.narod.ru/flamenco.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/13vek.html" title="medieval"><img src="http://leonardasf1.narod.ru/medieval.png" height="32"></a>
- &nbsp; · &nbsp; 
-</font>
-<br></div>
-  </td>
- </tr>
- <tr>
-	<td vAlign="top">
-	 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-
-		<tr>
-
-
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-	  	 <tr>
-				<td>
-
- <font color="#ff9900"><b> Toque</b></font> <br><br>
-<font size=2>
-
+<div>
 <b>Juan Martin - Guitar Method. El arte flamenco de la guitarra</b> <br><br>
-
-<a href="bulerias/JM85.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM85-200.jpg"></a>
-<a href="bulerias/JM86.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM86-200.jpg"></a>
-<a href="bulerias/JM87.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM87-200.jpg"></a>
-<br><br>
-<audio controls><source src="bulerias/FLAMENCO_curso_Juan_Martin-Leccion_12-1a_bulerias.mp3" type="audio/mpeg"></audio> Juan_Martin-Leccion_12-1a_bulerias<br>
-<a href="bulerias/JM88.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM88-200.jpg"></a>
-<a href="bulerias/JM89.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM89-200.jpg"></a>
-<a href="bulerias/JM90.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM90-200.jpg"></a>
-<a href="bulerias/JM91.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM91-200.jpg"></a>
-<br><br>
-<audio controls><source src="bulerias/FLAMENCO_curso_Juan_Martin-Leccion_13-2a_bulerias.mp3" type="audio/mpeg"></audio> Juan_Martin-Leccion_13-2a_bulerias<br>
-<a href="bulerias/JM92.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM92-200.jpg"></a>
-<a href="bulerias/JM93.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM93-200.jpg"></a>
+<a href="../flamenco/bulerias/JM85.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM85-200.jpg"></a>
+<a href="../flamenco/bulerias/JM86.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM86-200.jpg"></a>
+<a href="../flamenco/bulerias/JM87.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM87-200.jpg"></a>
+</div>
+<div>
+	Juan Martin Leccion 12 1a bulerias<br>
 <br>
+<audio controls><source src="../flamenco/bulerias/FLAMENCO_curso_Juan_Martin-Leccion_12-1a_bulerias.mp3" type="audio/mpeg"></audio><br>
+<a href="../flamenco/bulerias/JM88.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM88-200.jpg"></a>
+<a href="../flamenco/bulerias/JM89.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM89-200.jpg"></a>
+<a href="../flamenco/bulerias/JM90.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM90-200.jpg"></a>
+<a href="../flamenco/bulerias/JM91.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM91-200.jpg"></a>
+</div>
+<div>
+	Juan Martin Leccion 13 2a bulerias<br>
 <br>
-<audio controls><source src="bulerias/FLAMENCO_curso_Juan_Martin-Leccion_13-3a_bulerias.mp3" type="audio/mpeg"></audio> Juan_Martin-Leccion_13-3a_bulerias<br>
-<a href="bulerias/JM94.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM94-200.jpg"></a>
-<a href="bulerias/JM95.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM95-200.jpg"></a>
-<a href="bulerias/JM96.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM96-200.jpg"></a>
+<audio controls><source src="../flamenco/bulerias/FLAMENCO_curso_Juan_Martin-Leccion_13-2a_bulerias.mp3" type="audio/mpeg"></audio><br>
+<a href="../flamenco/bulerias/JM92.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM92-200.jpg"></a>
+<a href="../flamenco/bulerias/JM93.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM93-200.jpg"></a>
+</div>
+<div>
+	Juan Martin Leccion 13 3a bulerias<br>
 <br>
+<audio controls><source src="../flamenco/bulerias/FLAMENCO_curso_Juan_Martin-Leccion_13-3a_bulerias.mp3" type="audio/mpeg"></audio><br>
+<a href="../flamenco/bulerias/JM94.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM94-200.jpg"></a>
+<a href="../flamenco/bulerias/JM95.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM95-200.jpg"></a>
+<a href="../flamenco/bulerias/JM96.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM96-200.jpg"></a>
+</div>
+<div>
+	Juan Martin Leccion 15 4a bulerias<br>
 <br>
-<audio controls><source src="bulerias/FLAMENCO_curso_Juan_Martin-Leccion_15-4a_bulerias.mp3" type="audio/mpeg"></audio> Juan_Martin-Leccion_15-4a_bulerias<br>
-<a href="bulerias/JM107.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM107-200.jpg"></a>
-<a href="bulerias/JM108.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM108-200.jpg"></a>
-<a href="bulerias/JM109.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM109-200.jpg"></a>
-<a href="bulerias/JM110.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM110-200.jpg"></a>
-<a href="bulerias/JM111.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM111-200.jpg"></a>
-<a href="bulerias/JM112.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM112-200.jpg"></a>
-<a href="bulerias/JM113.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM113-200.jpg"></a>
+<audio controls><source src="../flamenco/bulerias/FLAMENCO_curso_Juan_Martin-Leccion_15-4a_bulerias.mp3" type="audio/mpeg"></audio><br>
+<a href="../flamenco/bulerias/JM107.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM107-200.jpg"></a>
+<a href="../flamenco/bulerias/JM108.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM108-200.jpg"></a>
+<a href="../flamenco/bulerias/JM109.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM109-200.jpg"></a>
+<a href="../flamenco/bulerias/JM110.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM110-200.jpg"></a>
+<a href="../flamenco/bulerias/JM111.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM111-200.jpg"></a>
+<a href="../flamenco/bulerias/JM112.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM112-200.jpg"></a>
+<a href="../flamenco/bulerias/JM113.jpg" data-lightbox="JM" data-title=""><img src="../flamenco/bulerias/JM113-200.jpg"></a>
+</div>
+<div>
+	Juan Martin Leccion 25 bulerias<br>
 <br>
-<br>
-<audio controls><source src="bulerias/FLAMENCO_curso_Juan_Martin-Leccion_25-bulerias.mp3" type="audio/mpeg"></audio> Juan_Martin-Leccion_25-bulerias<br>
-<a href="bulerias/JM.jpg" data-lightbox="JM" data-title=""><img src="bulerias/JM-200.jpg"></a>
-
-<hr>
-Enrique de Melchor. Bulerias <a href="https://yadi.sk/i/Yhji9g893PePJx" target="_blank">video</a><br><br>
-<a href="bulerias/EM.jpg" data-lightbox="EM" data-title=""><img src="bulerias/EM-200.jpg"></a>
-<hr>
-Enrique de Melchor. Bulerias en mi bemol <a href="bulerias/EMbulerias2.mpg" target="_blank">video</a><br><br>
-<a href="bulerias/EM.jpg" data-lightbox="EM" data-title=""><img src="bulerias/EM-200.jpg"></a>
-<hr>
-Enrique de Melchor. Bulerias por arriba <a href="bulerias/EMbulerias3.mpg" target="_blank">video</a><br><br>
-<a href="bulerias/EM.jpg" data-lightbox="EM" data-title=""><img src="bulerias/EM-200.jpg"></a>
-
-<hr>
-<iframe height="200" src="https://www.youtube.com/embed/heo4NsEPVG0" frameborder="0" allowfullscreen></iframe>
-<hr>
-<iframe height="200" src="https://www.youtube.com/embed/p5ypbEOZLUU" frameborder="0" allowfullscreen></iframe>
-<hr>
-<iframe src="//vk.com/video_ext.php?oid=1343958&id=170122432&hash=05129c73ca001137&hd=2" height="200" frameborder="0" allowfullscreen></iframe>
-
-<hr>
-<br>
-</font>
-				</td>
-			 </tr>
-
-		  </table>
-				</td>
-
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-<tr>
-				<td class="newStyle1">
- <font color="#ff9900"><b> Baile</b></font> <br><br>
-<font size=2>
-
-<br> · <a href="https://youtu.be/" target="_blank"><img src="https://www.youtube.com/favicon.ico" width=16></a> · 
-</font>
-
-        </td>
-       </tr>
-
-		  </table>
-	   </td>
-
-    </tr>
-   </table>
-  </td>
- </tr>
-</table>
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="80%">
-<div class="copy" align="center"><!-- <copy> -->2018 © Copyright leonardasf1. All Right Reserved.<!-- </copy> -->
- <!-- "' --><span class="pbsWDV8o"><a href="http://www.ucoz.ru/" title="Используются технологии uCoz" target="_blank" rel="nofollow">uCoz</a></span></div>
-</table>
-<script src="http://leonardasf1.narod.ru/lightbox/dist/js/lightbox-plus-jquery.min.js"></script>
-</body>
-</html>
+<audio controls><source src="../flamenco/bulerias/FLAMENCO_curso_Juan_Martin-Leccion_25-bulerias.mp3" type="audio/mpeg"></audio><br>
+</div>
+<div>
+Enrique de Melchor. Bulerias <a href="https://yadi.sk/i/Yhji9g893PePJx">video</a><br>
+Enrique de Melchor. Bulerias en mi bemol <a href="../flamenco/bulerias/EMbulerias2.mpg" target="_blank">(video)</a><br>
+Enrique de Melchor. Bulerias por arriba <a href="../flamenco/bulerias/EMbulerias3.mpg" target="_blank">(video)</a><br>
+<a href="https://youtu.be/heo4NsEPVG0">Niño Miguel - bulerias</a><br>
+<a href="https://youtu.be/p5ypbEOZLUU">Moraito Chico por Bulerías.</a><br>
+<a href="https://vk.com/video_ext.php?oid=1343958&id=170122432&hash=05129c73ca001137&hd=2">Гриша Горячев "Bulerias"</a>
+</div>
