--- a/flamenco/malaguena.html
+++ b/flamenco/malaguena.html
@@ -1,97 +1,51 @@
-<html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-    <title>leonardasf1.narod.ru Malaguena</title>
-<LINK href="http://leonardasf1.narod.ru/favicon.ico" rel="SHORTCUT ICON">
-<META NAME="RESOURCE-TYPE" CONTENT="DOCUMENT">
-<META NAME="DISTRIBUTION" CONTENT="GLOBAL">
-<META NAME="KEYWORDS" CONTENT="flamenco">
-<META NAME="DESCRIPTION" CONTENT="flamenco">
+<div id="pageTitle">Malaguena</div>
 
-<META NAME="REVISIT-AFTER" CONTENT="1 DAYS">
-<META NAME="RATING" CONTENT="GENERAL">
-<style type="text/css">
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 10pt;
-}
-.style1 {
-	text-align: center;
-}
-.style2 {
-	color: #000000;
-}
-</style>
-
-  <link rel="stylesheet" href="http://leonardasf1.narod.ru/lightbox/dist/css/lightbox.min.css">
-
-</head>
-<body bgcolor="#C0C0C0" text="#000000" vLink="#FFFFFF" link="#FFFFFF" background="background.jpg" class="newStyle1">
-
-<table border="0" cellspacing="0" cellpadding="0" align="center" height="100%" width="100%">
- <tr>
-	<td rowspan="5" class="line">
-						<IMG height="100%" src="spacer.gif" width="1">
-	</td>
-  <td vAlign="top" style="height: 102px" width="100%" background="http://leonardasf1.narod.ru/header-gray.jpg">
-<br><br><br>
-<div align="center"><font size=6 color="#ffffff">flamenco</font><font size=6> . Malaguena</div>
-<div align="right">
-<br>
-<font size=3>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/index.html" title="home"><img src="http://leonardasf1.narod.ru/favicon.ico" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/F1_Challenge/F1_Challenge.html" title="formula 1"><img src="http://leonardasf1.narod.ru/f1.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/Alpinism/Alpinism.html" title="alpinisme"><img src="http://leonardasf1.narod.ru/alpinism.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/sailing.html" title="sailing"><img src="http://leonardasf1.narod.ru/sailing.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/flamenco.html" title="flamenco"><img src="http://leonardasf1.narod.ru/flamenco.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/13vek.html" title="medieval"><img src="http://leonardasf1.narod.ru/medieval.png" height="32"></a>
- &nbsp; · &nbsp; 
-</font>
-<br></div>
-  </td>
- </tr>
- <tr>
-	<td vAlign="top">
-
-
-<font size=2>
-<br>
+<div style="max-width: 500px">
 Малагенья (исп. Malagueña) — один из традиционных стилей фламенко, вышедший из раннего фанданго района Малага, песня имеет восточные (арабские и африканские) корни. Народная по происхождению, малагенья стала стилем фламенко в XIX веке. Песенная мелодия обычно не используется для танцев в связи с тем, что не имеет чёткого постоянного ритмического рисунка, её относят к типу «свободных песен» (cante libre). Однако малагенья славится богатой мелодией с использованием микротонов.
-<p>
+</div>
+<div>
 Происхождение<br>
 Малагенья, выделившаяся из местного типа фанданго (танца с различными региональными вариациями и различными названиями), стала очень популярна в Испании к 18 веку. Хотя в настоящее время малагенью относят к типу «свободных песен», выполненных в произвольном стиле, и обычно не используют в танцах. Изначально фанданго пели и играли с высокой скоростью, а танцевали в сопровождении ритмического рисунка 6/8. Некоторые первоначальные мелодии фанданго из Малаги получили название вердиалес. Вердиалес продолжают танцевать и в наши дни на народных сборищах, как правило, в исполнении большого числа непрофессиональных танцовщиков, объединенных в группы под названием Pandas, и значительного количества гитаристов, называемых bandurrias (сорт мандолины), скрипачей и тамбуристов.
-<p>
+</div>
+<div>
 Развитие
 <p>
 Ко второй половине 19-го столетия были сделаны первые шаги в преобразовании народных песен фанданго в реальное фламенко.
 <p>
 Мелодия замедлилась (хотя и остались восточные ритмы фанданго) и включила в себя различные музыкальные приёмы, кроме того, количество сопровождающих инструментов сократилось до одной гитары. Возможно, данный процесс повлиял и на другие стили фламенко, а современные исследования указывают также и на влияние данного преобразования на оперу, сарсуэлу и другие стили классической музыки.
-<p>
+</div>
+<div>
 Самая старая мелодия малагеньи, сохранившаяся до наших дней, — Хабера, первое упоминание о которой встречается у Серэфина Эстебэнеза Колдерона, примерно в 1840-х годах. Согласно данному автору, такой тип малагеньи был создан артистом, известным под именем La Jabera. Ритмический рисунок этого раннего типа малагеньи сохранился в исполнении более поздних артистов, таких как Хуан Брева. Большинство же типов малагеньи было создано в последнее десятилетие XIX века.
-<p>
+</div>
+<div>
 Третий этап эволюции данного стиля фламенко заключался в окончательной потере ритмического рисунка мелодии. Данное преобразование было сделано певцами Антонием Чаконом и Энрике эль Мейисо, а также гитаристом Рамоном Монтойя. Ни один из них не родился в Малаге, а значит, они не росли под влиянием оригинальных народных песен фанданго. Эти люди были в некотором смысле создателями полностью нового стиля, сформированного профессиональными и полупрофессиональными артистами.
-<p>
+</div>
+<div>
 Типы малагеньи
 <p>
 Некоторые из традиционных, часто используемых музыкальных схем малагеньи приведены ниже. Однако многие из них не вошли в список, поскольку они редко исполняются или являются лишь изменением других главных стилей.
 <p>
 1. Juan Breva записал 3 собственные музыкальные схемы малагеньи в начале XX века.<br>
-<iframe frameborder="0" style="border:none;width:600px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/18700134/2083435/">Слушайте <a href='https://music.yandex.ru/track/18700134'>Malagueñas</a> — <a href='https://music.yandex.ru/artist/1290791'>Juan Breva</a> на Яндекс.Музыке</iframe>
-<p>
+<iframe frameborder="0" style="border:none;width:450px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/18700134/2083435/"><a href='https://music.yandex.ru/track/18700134'>Malagueñas</a> — <a href='https://music.yandex.ru/artist/1290791'>Juan Breva</a></iframe>
+</div>
+<div>
 2. Энрике эль Мейисо. Под его влиянием ритмический рисунок гитарной мелодии малагеньи был окончательно утерян и песни этого стиля стали относить к «свободным песням». Среди последователей Энрике, участвующих и в дальнейшем развитии предложенного им стиля, можно упомянуть El Niño de la Isla, Аурелио Селле, Маноло Караколь и Перикон де Кадис. Каждый из упомянутых артистов привнес свой вклад в малагенью, таким образом, сейчас трудно определить, как выглядели оригинальные музыкальные схемы данного типа малагеньи.
-<p>
+</div>
+<div>
 3. El Canario создал один из типов малагеньи.
 <p>
 4. Антонио Чакон создал наибольшее число музыкальных схем малагеньи. Мелодии, созданные им наиболее часто исполняются. Количество типов малагеньи, созданных им, высоко, однако авторство некоторых приписывается ему по традиции. Некоторые его схемы малагеньи различаются между собой лишь небольшими изменениями. Большинство типов малагеньи было записано им между 1909 и 1928 годами.
 <p>
 5. La Trini. Её наследие было сохранено такими певцами, как Себастиан эль Пена. Антонио Чакон немного изменил один из типов малагеньи, созданный ею.
-<p>
+</div>
+<div>
 Гитара в малагенье
 <p>
 Первоначально гитара использовалась совместно с другими музыкальными инструментами как часть народных малагских мелодий фанданго. В то время функции гитары заключались лишь в создании ритма мелодии и ограничивались использованием одной техники, называемой «abandolao». В процессе эволюции этого музыкального стиля, темп Малагеньи замедлился и гитаристы получили возможность включать в свою игру короткие сольные проигрыши и другие музыкальные приемы. Революция в гитарном исполнении Малагеньи пришла вместе с трансформацией последней в тип «свободная песня»: виртуозы фламенко, как Рамон Монтойя, начали применять в мелодии Малагеньи классические техники гитарной игры (напр. арпеджио, звукоряд, тремоло) и обогатили её более разнообразным положением аккордов. Они также начали вводить в промежутки между куплетами короткие гитарные соло, названные фальсеты, следуя за песнями других стилей фламенко.
 <p>
 Малагенья редко исполняется только как гитарная композиция и очень редко танцуется.
-<p>
+</div>
+<div>
 Musical analysis
 <p>
 The singing develops on a major mode (tonic, subdominant, dominant), resolving in the corresponding Phrygian mode of the same scale. The Phrygian mode is used for the short interludes after of before verses. The usual progression is the typical of all fandangos:
@@ -102,70 +56,28 @@ The singing develops on a major mode (tonic, subdominant, dominant), resolving i
 <br>    Fourth line: C Major, G7
 <br>    Fifth line: G7, C Major
 <br>    Sixth line: C Major, C7, F Major, G Major, F Major, E Major
-<p>
+</div>
+<div>
 To this typical progression other transition chords can be added. For example, D7 is often used in the transition to G Major. A minor often appears in guitar interludes (or even during the singing, as in the case of the Malagueña del Mellizo). These chords can also be transported by using a capo on the guitar, maintaining the same chord positions.
-<p>
+</div>
+<div>
 Its melodies are normally lyric in style and very ornate. Malagueña has traditionally been favoured by mellow voices, but there are many exceptions to this rule. Quite often, flamenco singers, after singing a several verses of malagueña in "cante libre" style, link directly with the more vivid styles of Fandangos abandolaos.
 <p>
-<iframe frameborder="0" style="border:none;width:600px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/7974028/832698/">Слушайте <a href='https://music.yandex.ru/album/832698/track/7974028'>Rapsodia Andaluza</a> — <a href='https://music.yandex.ru/artist/292931'>Vicente Gomez</a> на Яндекс.Музыке</iframe><hr>
- <img src="http://ru.wikipedia.org/favicon.ico" height="16"> <a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D0%B0%D0%B3%D0%B5%D0%BD%D1%8C%D1%8F_(%D1%84%D0%BB%D0%B0%D0%BC%D0%B5%D0%BD%D0%BA%D0%BE)" target="_blank" title="">ru.wikipedia</a> . 
- <img src="http://www.flamencopolis.com/favicon.ico" height="16"> <a href="http://www.flamencopolis.com/archives/282" target="_blank" title="flamencopolis">flamencopolis</a><hr>
-</font>
-
-	 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-
-		<tr>
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-	  	 <tr>
-				<td>
-
+<iframe frameborder="0" style="border:none;width:450px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/7974028/832698/"><a href='https://music.yandex.ru/album/832698/track/7974028'>Rapsodia Andaluza</a> — <a href='https://music.yandex.ru/artist/292931'>Vicente Gomez</a></iframe><hr>
+<a href="https://ru.wikipedia.org/wiki/%D0%9C%D0%B0%D0%BB%D0%B0%D0%B3%D0%B5%D0%BD%D1%8C%D1%8F_(%D1%84%D0%BB%D0%B0%D0%BC%D0%B5%D0%BD%D0%BA%D0%BE)" title="">ru.wikipedia</a>
+ . <a href="http://www.flamencopolis.com/archives/282" title="flamencopolis">flamencopolis</a><hr></div>
+<div>
  <font color="#ff9900"><b> Toque</b></font> <br><br>
 <font size=2>
-<iframe frameborder="0" style="border:none;width:600px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/15679305/4283642/">Слушайте <a href='https://music.yandex.ru/track/15679305'>Málaga</a> — <a href='https://music.yandex.ru/artist/67846'>Carlos Montoya</a> на Яндекс.Музыке</iframe>
+<iframe frameborder="0" style="border:none;width:450px;height:100px;" width="600" height="100" src="https://music.yandex.ru/iframe/#track/15679305/4283642/"><a href='https://music.yandex.ru/track/15679305'>Málaga</a> — <a href='https://music.yandex.ru/artist/67846'>Carlos Montoya</a></iframe>
 <hr>
 
-<a href="malaguena/malaguenatab.jpg" data-lightbox="1" data-title=""><img src="malaguena/malaguenatab_200.jpg"></a>
-<a href="malaguena/malaguena-4.jpg" data-lightbox="1" data-title=""><img src="malaguena/malaguena-4_200.jpg"></a>
-<br>
-<hr>
+<a href="../flamenco/malaguena/malaguenatab.jpg" data-lightbox="1" data-title=""><img src="../flamenco/malaguena/malaguenatab_200.jpg"></a>
+<a href="../flamenco/malaguena/malaguena-4.jpg" data-lightbox="1" data-title=""><img src="../flamenco/malaguena/malaguena-4_200.jpg"></a>
 
-Enrique de Melchor. malaguena <a href="malaguena/EMmalaguena.mpg" target="_blank">video</a><br><br>
-<a href="malaguena/EM61.jpg" data-lightbox="EM" data-title=""><img src="malaguena/EM61-200.jpg"></a>
-<a href="malaguena/EM62.jpg" data-lightbox="EM" data-title=""><img src="malaguena/EM62-200.jpg"></a>
-<hr>
-<br>
-</font>
-				</td>
-			 </tr>
-
-		  </table>
-				</td>
-
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-<tr>
-				<td class="newStyle1">
- <font color="#ff9900"><b> Baile</b></font> <br><br>
-<font size=2>
-<br> · <a href="https://youtu.be/" target="_blank"><img src="https://www.youtube.com/favicon.ico" width=16></a> · 
-</font>
-
-        </td>
-       </tr>
-
-		  </table>
-	   </td>
-
-    </tr>
-   </table>
-  </td>
- </tr>
-</table>
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="80%">
-<div class="copy" align="center"><!-- <copy> -->2018 © Copyright leonardasf1. All Right Reserved.<!-- </copy> -->
- <!-- "' --><span class="pbsWDV8o"><a href="http://www.ucoz.ru/" title="Используются технологии uCoz" target="_blank" rel="nofollow">uCoz</a></span></div>
-</table>
-<script src="http://leonardasf1.narod.ru/lightbox/dist/js/lightbox-plus-jquery.min.js"></script>
-</body>
-</html>
+</div>
+<div>
+Enrique de Melchor. malaguena <a href="../flamenco/malaguena/EMmalaguena.mpg" target="_blank">video</a><br><br>
+<a href="../flamenco/malaguena/EM61.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/malaguena/EM61-200.jpg"></a>
+<a href="../flamenco/malaguena/EM62.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/malaguena/EM62-200.jpg"></a>
+</div>
