--- a/guitar/i.html
+++ b/guitar/i.html
@@ -1,6 +1,6 @@
 <div id="pageTitle">Guitar</div>
 
-<div class="flex import_Img">
+<div class="flex import_Data">
 
 <div id="links" class="img16">
   <a href="http://guitar.ru/"><img src="http://guitar.ru/favicon.ico"> guitar.ru</a><br>
