--- a/programming/angular.html
+++ b/programming/angular.html
@@ -16,6 +16,8 @@
   </div>
   <div><pre><code>
 sudo npm install -g @angular/cli
+ng v // версия
+<a href="https://update.angular.io/">update.angular.io</a>
 ng new name-app --routing
 cd my-app
 ng serve --open //run+liveserver
