--- a/flamenco/granaina.html
+++ b/flamenco/granaina.html
@@ -1,110 +1,9 @@
-<html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-    <title>leonardasf1.narod.ru Granaina</title>
-<LINK href="http://leonardasf1.narod.ru/favicon.ico" rel="SHORTCUT ICON">
-<META NAME="RESOURCE-TYPE" CONTENT="DOCUMENT">
-<META NAME="DISTRIBUTION" CONTENT="GLOBAL">
-<META NAME="KEYWORDS" CONTENT="flamenco">
-<META NAME="DESCRIPTION" CONTENT="flamenco">
+<div id="pageTitle">Granaina Toque</div>
 
-<META NAME="REVISIT-AFTER" CONTENT="1 DAYS">
-<META NAME="RATING" CONTENT="GENERAL">
-<style type="text/css">
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 10pt;
-}
-.style1 {
-	text-align: center;
-}
-.style2 {
-	color: #000000;
-}
-</style>
-
-  <link rel="stylesheet" href="http://leonardasf1.narod.ru/lightbox/dist/css/lightbox.min.css">
-
-</head>
-<body bgcolor="#C0C0C0" text="#000000" vLink="#FFFFFF" link="#FFFFFF" background="background.jpg" class="newStyle1">
-
-<table border="0" cellspacing="0" cellpadding="0" align="center" height="100%" width="100%">
- <tr>
-	<td rowspan="5" class="line">
-						<IMG height="100%" src="spacer.gif" width="1">
-	</td>
-  <td vAlign="top" style="height: 102px" width="100%" background="http://leonardasf1.narod.ru/header-gray.jpg">
-<br><br><br>
-<div align="center"><font size=6 color="#ffffff">flamenco</font><font size=6> . Granaina</div>
-<div align="right">
-<br>
-<font size=3>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/index.html" title="home"><img src="http://leonardasf1.narod.ru/favicon.ico" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/F1_Challenge/F1_Challenge.html" title="formula 1"><img src="http://leonardasf1.narod.ru/f1.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/Alpinism/Alpinism.html" title="alpinisme"><img src="http://leonardasf1.narod.ru/alpinism.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/sailing.html" title="sailing"><img src="http://leonardasf1.narod.ru/sailing.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/flamenco.html" title="flamenco"><img src="http://leonardasf1.narod.ru/flamenco.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/13vek.html" title="medieval"><img src="http://leonardasf1.narod.ru/medieval.png" height="32"></a>
- &nbsp; · &nbsp; 
-</font>
-<br></div>
-  </td>
- </tr>
- <tr>
-	<td vAlign="top">
-	 <table width="100%" cellpadding="0" cellspacing="0" border="0">
-
-		<tr>
-
-
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-	  	 <tr>
-				<td>
-
- <font color="#ff9900"><b> Toque</b></font> <br><br>
-<font size=2>
-<hr>
-Enrique de Melchor. Granaina <a href="granaina/EMgranaina.mpg" target="_blank">video</a><br><br>
-<a href="granaina/EM48.jpg" data-lightbox="EM" data-title=""><img src="granaina/EM48-200.jpg"></a>
-<a href="granaina/EM49.jpg" data-lightbox="EM" data-title=""><img src="granaina/EM49-200.jpg"></a>
-<a href="granaina/EM50.jpg" data-lightbox="EM" data-title=""><img src="granaina/EM50-200.jpg"></a>
-<a href="granaina/EM51.jpg" data-lightbox="EM" data-title=""><img src="granaina/EM51-200.jpg"></a>
-
-
-<hr>
-<br>
-</font>
-				</td>
-			 </tr>
-
-		  </table>
-				</td>
-
-	   	   <td valign="top">
-		  <table border="0" cellpadding="5" cellspacing="0" width="100%">
-<tr>
-				<td class="newStyle1">
- <font color="#ff9900"><b> Baile</b></font> <br><br>
-<font size=2>
-<br> · <a href="https://youtu.be/" target="_blank"><img src="https://www.youtube.com/favicon.ico" width=16></a> · 
-</font>
-
-        </td>
-       </tr>
-
-		  </table>
-	   </td>
-
-    </tr>
-   </table>
-  </td>
- </tr>
-</table>
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="80%">
-<div class="copy" align="center"><!-- <copy> -->2018 © Copyright leonardasf1. All Right Reserved.<!-- </copy> -->
- <!-- "' --><span class="pbsWDV8o"><a href="http://www.ucoz.ru/" title="Используются технологии uCoz" target="_blank" rel="nofollow">uCoz</a></span></div>
-</table>
-<script src="http://leonardasf1.narod.ru/lightbox/dist/js/lightbox-plus-jquery.min.js"></script>
-</body>
-</html>
+<div>
+Enrique de Melchor. Granaina <a href="../flamenco/granaina/EMgranaina.mpg" target="_blank">(video)</a><br><br>
+<a href="../flamenco/granaina/EM48.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/granaina/EM48-200.jpg"></a>
+<a href="../flamenco/granaina/EM49.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/granaina/EM49-200.jpg"></a>
+<a href="../flamenco/granaina/EM50.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/granaina/EM50-200.jpg"></a>
+<a href="../flamenco/granaina/EM51.jpg" data-lightbox="EM" data-title=""><img src="../flamenco/granaina/EM51-200.jpg"></a>
+</div>
