--- a/flamenco/index.html
+++ b/flamenco/index.html
@@ -19,7 +19,7 @@
   <div id="headerMenu"></div>
 </header>
 
-<main class="flex">
+<main class="import_Data flex">
 
 <nav>
 	<a class="navLink">Alegrias</a>
@@ -51,10 +51,10 @@
 <h2>tecnica zapateado</h2>  
  <a href="https://youtu.be/ajJyNFQFPQc">Doble Golpe</a><br>
 <h3>Técnica de la baile</h3>
-<a href="https://youtu.be/rShnp9PYgSs"></a><br>
+<a href="https://youtu.be/rShnp9PYgSs">Clase magistral de Domingo Ortega</a><br>
 </div>
 
-<div class="import_Img">
+<div>
 	
 <a href="../flamenco/Arbol-Genealogico-del-Cante.jpg" data-lightbox="1" data-title=""><img src="../flamenco/Arbol-Genealogico-del-Cante-200.jpg"></a>
 <a href="../flamenco/1.jpg" data-lightbox="1"><img src="../flamenco/1-200.jpg"></a>
@@ -64,11 +64,11 @@
 
 <div>
 	
-<a href="https://youtu.be/PMaCrMNP6ic"></a>
-<a href="https://youtu.be/vk7J2N3zRIY"></a>
-<a href="https://youtu.be/D2Jav4phlYg"></a>
-<a href="https://youtu.be/5_Cn9i4iq20"></a>
-<a href="https://youtu.be/WQCS-JXGFPs"></a>
+<a href="https://youtu.be/PMaCrMNP6ic">Alegrías - Rafael Campallo</a><br>
+<a href="https://youtu.be/vk7J2N3zRIY">Tangos - Morón, Ortega y Campallo</a><br>
+<a href="https://youtu.be/D2Jav4phlYg">Domingo Ortega Casa Patas 2012</a><br>
+<a href="https://youtu.be/5_Cn9i4iq20">Camaroneando. Farruco. 2011</a><br>
+<a href="https://youtu.be/WQCS-JXGFPs">Concha Jareno Alegrias 1 Premio Matilde Coral</a><br>
 </div>
 
 
