--- a/flamenco/tientos.html
+++ b/flamenco/tientos.html
@@ -1,126 +1,5 @@
-<html>
-<head>
-<link href='https://fonts.googleapis.com/css?family=Open+Sans:300&subset=latin,cyrillic,cyrillic-ext' rel='stylesheet' type='text/css'>
-    <title>leonardasf1.narod.ru Tientos</title>
-<LINK href="http://leonardasf1.narod.ru/favicon.ico" rel="SHORTCUT ICON">
-<META NAME="RESOURCE-TYPE" CONTENT="DOCUMENT">
-<META NAME="DISTRIBUTION" CONTENT="GLOBAL">
-<META NAME="KEYWORDS" CONTENT="flamenco">
-<META NAME="DESCRIPTION" CONTENT="flamenco">
+<div id="pageTitle">Tientos</div>
 
-<META NAME="REVISIT-AFTER" CONTENT="1 DAYS">
-<META NAME="RATING" CONTENT="GENERAL">
-<style type="text/css">
-body {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 10pt;
-}
-.style1 {
-	text-align: center;
-}
-.style2 {
-	color: #000000;
-}
-</style>
-
-  <link rel="stylesheet" href="http://leonardasf1.narod.ru/lightbox/dist/css/lightbox.min.css">
-
-</head>
-<body bgcolor="#C0C0C0" text="#000000" vLink="#FFFFFF" link="#FFFFFF" background="background.jpg" class="newStyle1">
-
-<table border="0" cellspacing="0" cellpadding="0" align="center" height="100%" width="80%">
- <tr>
-	<td rowspan="5" class="line">
-						<IMG height="100%" src="spacer.gif" width="1">
-	</td>
-  <td vAlign="top" style="height: 102px" width="100%" background="http://leonardasf1.narod.ru/header-gray.jpg">
-<br><br><br>
-<div align="center"><font size=6 color="#ffffff">flamenco</font><font size=6> . Tientos</div>
-<div align="right">
-<br>
-<font size=3>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/index.html" title="home"><img src="http://leonardasf1.narod.ru/favicon.ico" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/F1_Challenge/F1_Challenge.html" title="formula 1"><img src="http://leonardasf1.narod.ru/f1.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/Alpinism/Alpinism.html" title="alpinisme"><img src="http://leonardasf1.narod.ru/alpinism.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/sailing.html" title="sailing"><img src="http://leonardasf1.narod.ru/sailing.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/flamenco.html" title="flamenco"><img src="http://leonardasf1.narod.ru/flamenco.png" height="32"></a>
- &nbsp; · &nbsp; <a href="http://leonardasf1.narod.ru/13vek.html" title="medieval"><img src="http://leonardasf1.narod.ru/medieval.png" height="32"></a>
- &nbsp; · &nbsp; 
-</font>
-<br></div>
-  </td>
- </tr>
- <tr>
-	<td vAlign="top" background="bg.gif">
-	 <table width="100%" cellpadding="0" background="bg.gif" cellspacing="0" border="0">
-		<tr>
-
-
-	   	   <td valign="top" style="width: 75%">
-		  <table border="0" cellpadding="0" cellspacing="0" width="100%">
-	  	 <tr>
-				<td>
-<table border="0" align="center" cellpadding="0" cellspacing="0" width="100%">
-			 <tr>
-				<td width="100%" height="20" bgcolor="#C0C0C0" align="center">
-					
-				</td>
-			 </tr>
-		  </table>
-<font size=2>
-
-
-
-<hr>
-Enrique de Melchor. Tientos <a href="tientos/EMtientos.mpg" target="_blank">video</a><br><br>
-<a href="tientos/EM.jpg" data-lightbox="EM" data-title=""><img src="tientos/EM-200.jpg"></a>
-
-<hr>
-<br>
-</font>
-				</td>
-			 </tr>
-		  </table>
-	   </td>
-
-
-		 <td width="15%" bgcolor="#C0C0C0" valign="top">
-
-		  <table width="100%" align="center" border="0" cellpadding="0" cellspacing="0">
-			 <tbody><tr>
-				<td width="100%" height="20">
-					
-
-				</td>
-			 </tr>
-		  </tbody></table>
-
-		  <table bgcolor="#808080" align="right" border="0" cellpadding="10" cellspacing="0" width="170">
- 	     <tbody><tr>
-				<td class="newStyle1">
- <font color="#ff9900"><b>links</b></font> <br><br>
-<font size=2>
- <img src="http://www.twirpx.com/favicon.ico" height="16" width="16"> <a href="http://www.twirpx.com/files/art/music/instrumental/stringed/guitar/flamenco/" target="_blank" title="stringed/guitar/flamenco/">книги.guitar</a><br>
- <img src="http://www.twirpx.com/favicon.ico" height="16" width="16"> <a href="http://www.twirpx.com/files/art/music/note/guitar/flamenco/" target="_blank" title="note/guitar/flamenco/">книги.note.guitar</a><br>
- <img src="http://www.flamenco.ru/favicon.ico" height="16" width="16"> <a href="http://www.flamenco.ru" target="_blank">flamenco.ru</a><br>
- <img src="http://www.foroflamenco.com/image/favorite.ico" height="16" width="16"> <a href="http://www.foroflamenco.com" target="_blank">foroflamenco</a><br>
-</font>
-
-        </td>
-       </tr>
-</tbody></table>
-
-
-	   </td>
-    </tr>
-   </table>
-  </td>
- </tr>
-</table>
-<table border="0" cellspacing="0" cellpadding="0" align="center" width="80%">
-<div class="copy" align="center"><!-- <copy> -->2017 © Copyright leonardasf1. All Right Reserved.<!-- </copy> -->
- <!-- "' --><span class="pbsWDV8o"><a href="http://www.ucoz.ru/" title="Используются технологии uCoz" target="_blank" rel="nofollow">uCoz</a></span></div>
-</table>
-<script src="http://leonardasf1.narod.ru/lightbox/dist/js/lightbox-plus-jquery.min.js"></script>
-</body>
-</html>
+<div>
+	Enrique de Melchor. Tientos <a href="../flamenco/tientos/EMtientos.mpg" target="_blank">(video)</a>
+</div>
